--- a/src/main/resources/src/livrosView.fxml
+++ b/src/main/resources/src/livrosView.fxml
@@ -10,16 +10,14 @@
       <TableView fx:id="tabLivros" prefHeight="374.0" prefWidth="600.0">
          <columns>
             <TableColumn fx:id="id_livro" prefWidth="39.0" text="ID" />
-            <TableColumn fx:id="nome_livro" prefWidth="265.0" text="Nome" />
-            <TableColumn fx:id="autores_livro" prefWidth="237.0" text="Autores" />
-            <TableColumn fx:id="paginas_livro" prefWidth="58.0" text="Paginas" />
+            <TableColumn fx:id="nome_livro" minWidth="9.0" prefWidth="488.0" text="Nome" />
+            <TableColumn fx:id="paginas_livro" maxWidth="400.0" minWidth="0.0" prefWidth="72.0" text="Paginas" />
          </columns>
       </TableView>
       <Button fx:id="update_livro" layoutX="422.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleUpdate" prefHeight="25.0" prefWidth="76.0" text="Update" />
       <Button fx:id="delete_livro" layoutX="511.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleDelete" prefHeight="25.0" prefWidth="76.0" text="Delete" />
       <Button fx:id="create_livro" layoutX="333.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleCreate" prefHeight="25.0" prefWidth="76.0" text="Create" />
       <Button fx:id="voltar_inicio" layoutY="374.0" mnemonicParsing="false" onAction="#handleVoltar" prefHeight="25.0" prefWidth="76.0" text="Voltar" />
-      <Button fx:id="autoria_delete" layoutX="112.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleDeleteAutoria" prefHeight="25.0" prefWidth="90.0" text="Deletar Autor" />
-      <Button fx:id="autoria_inserir" layoutX="210.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleInsertAutoria" prefHeight="25.0" prefWidth="90.0" text="Inserir Autor" />
+      <Button fx:id="autoria_inserir" layoutX="154.0" layoutY="374.0" mnemonicParsing="false" onAction="#handleAutoria" prefHeight="25.0" prefWidth="90.0" text="Ver autores" />
    </children>
 </AnchorPane>
